# Clueme-Meetings

./: .gitignore  README.md  main.py  pyproject.toml
src/: agent.py  config.py  debug_log.py  logs.py  native_runtime.py  session_context.py  sessions.py  transcriber.py  whisper_online.py
src/agent/: __init__.py  client.py  meeting_chat.py  model_config.py  session_naming.py  system_instruction.py  tools.py
src/app/: page_setup.py  state.py
src/handlers/chat/: edit_handler.py  retry_handler.py  send_handler.py  stop_handler.py  suggest_handler.py  summarize_handler.py
src/handlers/recording/: callbacks.py  start_handler.py  stop_handler.py
src/handlers/session/: auto_name_handler.py  back_handler.py  create_handler.py  delete_handler.py  enter_handler.py  rename_handler.py
src/handlers/toolbar/: clear_handler.py  update_handler.py
src/handlers/view/: rebuild_handler.py  switch_handler.py
src/layout/: home_view.py  meeting_view.py  toolbar.py
src/transcriber/: __init__.py  constants.py  live_transcriber.py
src/transcriber/audio/: __init__.py  accumulator.py
src/transcriber/devices/: __init__.py  discovery.py
src/transcriber/recording/: __init__.py  process_worker.py
src/ui/: chat_tab.py  session_list.py  settings_dialog.py  transcript_tab.py
src/ui/chat/: __init__.py  assistant_bubble.py  chat_tab.py  stream_chunk.py  user_bubble.py
src/ui/settings/: __init__.py  settings_dialog.py
src/ui/settings/tabs/: __init__.py  api_tab.py  audio_tab.py  debug_tab.py  model_tab.py  transcription_tab.py
